Used a fixed highlight colour for the score (whether dark mode or not)

--- a/css/index.scss
+++ b/css/index.scss
@@ -44,6 +44,7 @@ body {
     --color-border: hsl(210, 58%, 57%);
     --color-background-lighter: hsl(210, 65%, 80%);
     --color-active-button: hsl(210, 65%, 80%);
+    --color-score-highlight: hsl(210, 65%, 25%);
     --color-c1: 360;  // only define hue, because javascript 
     --color-c2: 320;  // adds a saturation of 50% and modifies the lightness
     --color-c3: 30;
